# hf-speedtest

./: .gitignore  README.md  pyproject.toml
src/hf_speedtest/: cli.py  iata.py  location.py
