[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-speedtest"
version = "0.1.0"
description = "Measure your download bandwidth to the HuggingFace CDN"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
hf-speedtest = "hf_speedtest.cli:main"
